2016-05-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (ReadImages): Avoid possible infinite
	ReadImage() recursion.

2016-05-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPolygonPrimitive): Fix divide by zero
	exception encountered while reading file "sigfpe.svg" posted by
	Gustavo Grieco on May 1, 2016 to the oss-security mailing list
	with subject "CVE request: DoS in multiple versions of
	GraphicsMagick".
	(DrawDashPolygon): Fix endless loop problem caused by negative
	stroke-dasharray arguments.  Resolves problem observed while
	reading file "circular.svg" posted by Gustavo Grieco on May 1,
	2016 to the oss-security mailing list with subject "CVE request:
	DoS in multiple versions of GraphicsMagick".

	* magick/import.c (ImportViewPixelArea): Fix assertion while
	reading TIFF file gkkxrilssm.tiff.105123337066 provided by Gustavo
	Grieco.

2016-04-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/locale.c (ReadLOCALEImage): Make sure to close blob
	before returning.

	* coders/svg.c ("C"): Provide a hack work-around for double-quoted
	font-family argument.

	* magick/render.c (DrawImage): Make SVG path and other primitive
	parsing more robust.  Fixes SEGV when reading files provided by
	CVE-2016-2318 test cases.  Fixes CVE-2016-2318 completely.

2016-04-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Fix heap buffer overflow when
	reading aaphrbkwwe.svg.-1114777018469422437 from CVE-2016-2317
	test cases.  This resolves CVE-2016-2317 completely.

2016-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImageCommand): Added mogrify
	-preserve-timestamp option to preserve file access and
	modification timestamps.  Contributed by Niko Rosvall via
	SourceForge patch #45 "preserve-timestamp option for mogrify
	command."

2016-04-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
