@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020160501"
-#define public MagickPackageReleaseDate "snapshot-20160501"
+#define public MagickPackageVersionAddendum ".020160504"
+#define public MagickPackageReleaseDate "snapshot-20160504"
