@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2016-05-04  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>config/delegates.mgk.in: Gnuplot files are inherently insecure.
+Remove delegates support for reading them.</li>
+<li>magick/constitute.c (ReadImages): Avoid possible infinite
+ReadImage() recursion.</li>
+</ul>
+</blockquote>
 <p>2016-05-01  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
